--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   </head>
 
   <body>
-    <div id="clock"></div>
+    <div class="page-content">
+      <form>
+        <input type="text" name="firstName" required />
+      </form>
+    </div>
   </body>
-  <script src="script.js"></script>
+  <script src="app.js"></script>
 </html>
