--- a/index.html
+++ b/index.html
@@ -4,14 +4,73 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Clock</title>
+    <title>Form</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <div class="page-content">
       <form>
-        <input type="text" name="firstName" required />
+        <label for="firstName">First Name</label>
+        <input type="text" name="firstName" required placeholder="Theo" />
+        <label for="lastName">Last Name</label>
+        <input type="text" name="lastName" required placeholder="Jackson" />
+        <label for="email">Email Address</label>
+        <input
+          type="email"
+          name="email"
+          required
+          placeholder="example@example.com"
+        />
+        <label for="phone">Phone</label>
+        <input type="tel" name="phone" placeholder="000-000-0000" />
+
+        <label for="dogName1">Dog's Name</label>
+        <input type="text" name="dogName1" required placeholder="Fido" />
+        <label for="xsmall1">Under 10 lbs</label>
+        <input type="radio" name="xsmall1" />
+        <label for="small1">10-20 lbs</label>
+        <input type="radio" name="small1" />
+        <label for="medium1">21-60 lbs</label>
+        <input type="radio" name="medium1" />
+        <label for="large1">61-90lbs</label>
+        <input type="radio" name="large1" />
+        <label for="xlarge1">Over 90 lbs</label>
+        <input type="radio" name="xlarge1" />
+
+        <label for="dogName2">Second Dog's Name</label>
+        <input type="text" name="dogName2" placeholder="Spot" />
+        <label for="xsmall2">Under 10 lbs</label>
+        <input type="radio" name="xsmall2" />
+        <label for="small2">10-20 lbs</label>
+        <input type="radio" name="small2" />
+        <label for="medium2">21-60 lbs</label>
+        <input type="radio" name="medium2" />
+        <label for="large2">61-90lbs</label>
+        <input type="radio" name="large2" />
+        <label for="xlarge2">Over 90 lbs</label>
+        <input type="radio" name="xlarge2" />
+
+        <label for="dogName3">Third Dog's Name</label>
+        <input type="text" name="dogName3" placeholder="Scout" />
+        <label for="xsmall3">Under 10 lbs</label>
+        <input type="radio" name="xsmall3" />
+        <label for="small3">10-20 lbs</label>
+        <input type="radio" name="small3" />
+        <label for="medium3">21-60 lbs</label>
+        <input type="radio" name="medium3" />
+        <label for="large3">61-90lbs</label>
+        <input type="radio" name="large3" />
+        <label for="xlarge3">Over 90 lbs</label>
+        <input type="radio" name="xlarge3" />
+
+        <label>Which dog parks would you like meet at? </label>
+        <input type="checkbox" name="AnnMor" />
+        <label for="AnnMor">Ann Morrison</label>
+        <input type="checkbox" name="Military" />
+        <label for="Military">Fort Boise Military Reserve</label>
+        <input type="checkbox" name="MorrisHill" />
+        <label for="MorrisHill">Morris Hill Park</label>
       </form>
     </div>
   </body>
