--- a/index.html
+++ b/index.html
@@ -24,19 +24,20 @@
         />
         <label for="phone">Phone</label>
         <input type="tel" name="phone" placeholder="000-000-0000" />
-
-        <label for="dogName1">Dog's Name</label>
-        <input type="text" name="dogName1" required placeholder="Fido" />
-        <label for="xsmall1">Under 10 lbs</label>
-        <input type="radio" name="xsmall1" />
-        <label for="small1">10-20 lbs</label>
-        <input type="radio" name="small1" />
-        <label for="medium1">21-60 lbs</label>
-        <input type="radio" name="medium1" />
-        <label for="large1">61-90lbs</label>
-        <input type="radio" name="large1" />
-        <label for="xlarge1">Over 90 lbs</label>
-        <input type="radio" name="xlarge1" />
+        <div class="multiple-selectors">
+          <label for="dogName1">Dog's Name</label>
+          <input type="text" name="dogName1" required placeholder="Fido" />
+          <label for="xsmall1">Under 10 lbs</label>
+          <input type="radio" name="xsmall1" />
+          <label for="small1">10-20 lbs</label>
+          <input type="radio" name="small1" />
+          <label for="medium1">21-60 lbs</label>
+          <input type="radio" name="medium1" />
+          <label for="large1">61-90lbs</label>
+          <input type="radio" name="large1" />
+          <label for="xlarge1">Over 90 lbs</label>
+          <input type="radio" name="xlarge1" />
+        </div>
 
         <label for="dogName2">Second Dog's Name</label>
         <input type="text" name="dogName2" placeholder="Spot" />
