changes to forms

--- a/index.html
+++ b/index.html
@@ -38,32 +38,34 @@
           <label for="xlarge1">Over 90 lbs</label>
           <input type="radio" name="xlarge1" />
         </div>
-
-        <label for="dogName2">Second Dog's Name</label>
-        <input type="text" name="dogName2" placeholder="Spot" />
-        <label for="xsmall2">Under 10 lbs</label>
-        <input type="radio" name="xsmall2" />
-        <label for="small2">10-20 lbs</label>
-        <input type="radio" name="small2" />
-        <label for="medium2">21-60 lbs</label>
-        <input type="radio" name="medium2" />
-        <label for="large2">61-90lbs</label>
-        <input type="radio" name="large2" />
-        <label for="xlarge2">Over 90 lbs</label>
-        <input type="radio" name="xlarge2" />
-
-        <label for="dogName3">Third Dog's Name</label>
-        <input type="text" name="dogName3" placeholder="Scout" />
-        <label for="xsmall3">Under 10 lbs</label>
-        <input type="radio" name="xsmall3" />
-        <label for="small3">10-20 lbs</label>
-        <input type="radio" name="small3" />
-        <label for="medium3">21-60 lbs</label>
-        <input type="radio" name="medium3" />
-        <label for="large3">61-90lbs</label>
-        <input type="radio" name="large3" />
-        <label for="xlarge3">Over 90 lbs</label>
-        <input type="radio" name="xlarge3" />
+        <div>
+          <label for="dogName2">Second Dog's Name</label>
+          <input type="text" name="dogName2" placeholder="Spot" />
+          <label for="xsmall2">Under 10 lbs</label>
+          <input type="radio" name="xsmall2" />
+          <label for="small2">10-20 lbs</label>
+          <input type="radio" name="small2" />
+          <label for="medium2">21-60 lbs</label>
+          <input type="radio" name="medium2" />
+          <label for="large2">61-90lbs</label>
+          <input type="radio" name="large2" />
+          <label for="xlarge2">Over 90 lbs</label>
+          <input type="radio" name="xlarge2" />
+        </div>
+        <div>
+          <label for="dogName3">Third Dog's Name</label>
+          <input type="text" name="dogName3" placeholder="Scout" />
+          <label for="xsmall3">Under 10 lbs</label>
+          <input type="radio" name="xsmall3" />
+          <label for="small3">10-20 lbs</label>
+          <input type="radio" name="small3" />
+          <label for="medium3">21-60 lbs</label>
+          <input type="radio" name="medium3" />
+          <label for="large3">61-90lbs</label>
+          <input type="radio" name="large3" />
+          <label for="xlarge3">Over 90 lbs</label>
+          <input type="radio" name="xlarge3" />
+        </div>
 
         <label>Which dog parks would you like meet at? </label>
         <input type="checkbox" name="AnnMor" />
@@ -72,6 +74,9 @@
         <label for="Military">Fort Boise Military Reserve</label>
         <input type="checkbox" name="MorrisHill" />
         <label for="MorrisHill">Morris Hill Park</label>
+        <div>
+          <button type="submit">Submit</button>
+        </div>
       </form>
     </div>
   </body>
